instructions for linking in html

--- a/index.html
+++ b/index.html
@@ -357,6 +357,11 @@ display: none;
 </div>
 
 
+<div id="add-new-links-by-typing-text-easy" class="section level2">
+<h2>Add new links by typing <a href="link">text</a>, easy</h2>
+<p>add images with a link as well, but you have to upload the image to
+github as well</p>
+</div>
 <div id="r-markdown" class="section level2">
 <h2>R Markdown</h2>
 <p>This is an R Markdown document. Markdown is a simple formatting
